<resources>
    <string name="app_name">Skillcinema</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contentDescriptionOfPictureInLoadingFragment">picture</string>
    <string name="label_skillcinema">Label Skillcinema</string>
    <string name="missButtonLabel">Пропустить</string>
    <string name="picture_on_boarding0">pictureOnBoarding0</string>
    <string name="text_on_boarding0">Узнавай \nо премьерах</string>
    <string name="text_on_boarding1">Создавай \nколлекции</string>
    <string name="picture_on_boarding2">picture on boarding2</string>
    <string name="picture_on_boarding1">picture on boarding1</string>
    <string name="text_on_boarding2">Делись \nс друзьями</string>
    <string name="imageDescriptionPoster">poster</string>
    <string name="movie_logo">movie_logo</string>
    <string name="add_to_favorites_button">add_to_favorites_button</string>
    <string name="want_to_see_movie_button">want_to_see_movie_button</string>
    <string name="some_more_button">some_more_button</string>
    <string name="share_button">share_button</string>
    <string name="actors_in_movie_label">В фильме снимались</string>
    <string name="moviemans_in_movie_label">Над фильмом работали</string>
    <string name="gallery_label">Галерея</string>
    <string name="recent_movies_label">Похожие фильмы</string>
    <string name="serial_seasons_label">Сезоны и серии</string>
    <string name="season_label">Сезон</string>
    <string name="actor_photo_description">Фото актера</string>
    <string name="photo_from_gallery">элемент галереи</string>
    <string name="poster">Постер</string>
    <string name="viewed_label">метка что просмотрено</string>
    <string name="label_on_button">изображение на кнопке- стрелка</string>
    <string name="gallery_item">элемент галереи</string>
    <string name="clear_history_label_btn">Очистить историю</string>
    <string name="thinck_up_name_for_new_collection">Придумайте название для вашей новой коллекции</string>
    <string name="checkbox_pic">checkbox_pic</string>
    <string name="create_my_collection">Создать свою коллекцию</string>
    <string name="create_collection_btn_pic">create_collection_btn_pic</string>
    <string name="close_btn_pic">close_btn_pic</string>
    <string name="ok">Готово</string>
    <string name="add_new_collection">Добавить в колекцию</string>
    <string name="filmography">Фильмография</string>
    <string name="the_best">Лучшее</string>
    <string name="all_btn"><![CDATA[Все >]]></string>
    <string name="go_to_list_btn"><![CDATA[К списку >]]></string>
    <string name="movieman_photo">movieman_photo</string>
    <string name="all_btn_1"><![CDATA[Все>]]></string>
    <string name="viewed_movie_button">viewed_movie_button</string>
    <string name="add_new_collection_1">add new collection</string>
    <string name="create_my_collection_1">Создать свою коллекцию</string>
    <string name="collections_from_db">Коллекции</string>
    <string name="collection_of_interested_movies">Вам было интересно</string>
    <string name="viewed_collection">Просмотрено</string>
    <string name="show_all">Все</string>
    <string name="show_me_all">Показать все</string>
    <string name="search_hint">Фильмы, актёры, режиссёры</string>
    <string name="have_no_result_text">К сожалению, по вашему запросу ничего не найдено</string>
    <string name="add_collection_checkbox_label">Добавить в колекцию</string>
    <string name="to_back_btn_label">to_back</string>
    <string name="to_forward_btn_label">to_forward</string>
    <string name="show_me_text">Показывать</string>
    <string name="country_label">Страна</string>
    <string name="genre_label">Жанр</string>
    <string name="year_label">Год</string>
    <string name="rate_label">Рейтинг</string>
    <string name="start_rate_label">1</string>
    <string name="end_rate_label">10</string>
    <string name="sort_label">Сортировать</string>
    <string name="sort_for_date">Дата</string>
    <string name="all_type">Все</string>
    <string name="type_only_movies">Фильмы</string>
    <string name="popular_sort">Популярность</string>
    <string name="rate_sort">Рейтинг</string>
    <string name="type_serials_only">Сериалы</string>
    <string name="checkbox_only_not_viewed_label">Не просмотрен</string>
    <string name="error_label">Ошибка!</string>
    <string name="error_description">Во время обработки запроса \nпроизошла ошибка</string>
    <string name="start_period_for_seach">Искать в период с</string>
    <string name="end_period_for_search">Искать в период до</string>
    <string name="take_it_label_btn">Выбрать</string>
    <string name="search_left_border">search_left_border</string>
    <string name="search_ico">search_ico</string>
    <string name="search_separator">search_separator</string>
    <string name="search_left_border_2">search_left_border</string>
    <string name="search_left_border_3">search_left_border</string>
    <string name="search_ico_2">search_ico</string>
    <string name="search_left_border_1">search_left_border</string>
</resources>