<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="26dp"
    tools:context=".ui.search.options.PeriodOptionFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/hkgrotesk_regular"
        android:text="@string/start_period_for_seach"
        android:textColor="@color/color_of_genre"
        android:textSize="14sp" />

    <org.sniffsnirr.skillcinema.castomview.YearPicker
        android:id="@+id/start_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/hkgrotesk_regular"
        android:text="@string/end_period_for_search"
        android:textColor="@color/color_of_genre"
        android:textSize="14sp" />

    <org.sniffsnirr.skillcinema.castomview.YearPicker
        android:id="@+id/end_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/go_btn"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_gravity="center_horizontal"

        android:layout_marginTop="24dp"
        android:background="@drawable/rect_corner_without_stroke_blue"
        android:fontFamily="@font/hkgrotesk_medium"
        android:text="@string/take_it_label_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />


</LinearLayout>