<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movieman.MoviemanFragment">

    <LinearLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginStart="26dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="26dp"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/photo_movieman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/movieman_photo"
                    android:src="@drawable/poster_example" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginStart="13dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="26dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_movieman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="Сильвестр Сталлоне"
                android:textColor="@color/color_of_main_label_in_onboarding"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/prof_of_movieman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="Сильвестр Сталлоне"
                android:textColor="@color/color_of_genre"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/header_best_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="26dp"
        android:paddingTop="26dp"
        android:paddingEnd="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner">

        <TextView
            android:id="@+id/actors_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/the_best"
            android:textColor="@color/color_of_main_label_in_onboarding"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/all_best_movies_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:fontFamily="@font/hkgrotesk_medium"
            android:text="@string/all_btn"
            android:textColor="@color/color_of_progress"
            android:textSize="14sp" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/best_movies_rv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_best_movies" />

    <LinearLayout
        android:id="@+id/filmography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="26dp"
        android:paddingTop="26dp"
        android:paddingEnd="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/best_movies_rv">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/filmography"
                android:textColor="@color/color_of_main_label_in_onboarding"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/number_of_movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="Сильвестр Сталлоне"
                android:textColor="@color/color_of_genre"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/all_movies_filmography"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:fontFamily="@font/hkgrotesk_medium"
            android:text="@string/go_to_list_btn"
            android:textColor="@color/color_of_progress"
            android:textSize="14sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>